tests/snapshots/parser_error_fixtures/missing_list_pattern_bracket.snap
---
source: tests/error_fixtures/parser_error_fixtures_snapshots.rs
---
Fixture: examples/parser_errors/missing_list_pattern_bracket.flx
== compile ==
failed (parse)
== diagnostics ==
error[E034]: Unexpected Token

Expected `]` to close list pattern.

  examples/parser_errors/missing_list_pattern_bracket.flx:3:22
  |
3 |         [head | tail -> head,
  |                      ^^

Hint:
  List patterns use `[]` or `[head | tail]`.

Note:
  while parsing function `main` > `match` expression
== stdout ==
<not executed>
